--- a/Sources/Background.tex
+++ b/Sources/Background.tex
@@ -24,7 +24,7 @@ talk about Fi
 Talk about previous approach
 
 
-\section{Nested Composition and Family Polymorphism}
+\section{Family Polymorphism and Nested Composition}
 
 % %-------------------------------------------------------------------------------
 % \subsection{Motivation: Family Polymorphism}
