--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1274,3 +1274,17 @@ keywords = "Featherweight Java, Trait, Type system"
   booktitle={Proceedings of the 4th International Conference on Functional Programming Languages and Computer Architecture},
   year={1989},
 }
+
+@InProceedings{bi_et_al:LIPIcs:2018:9227,
+  author =	{Xuan Bi and Bruno C. d. S. Oliveira and Tom Schrijvers},
+  title =	{{The Essence of Nested Composition}},
+  booktitle =	{European Conference on Object-Oriented Programming  (ECOOP)},
+  year =	{2018},
+}
+
+@InProceedings{bi_et_al:LIPIcs:2018:9214,
+  author =	{Xuan Bi and Bruno C. d. S. Oliveira},
+  title =	{{Typed First-Class Traits}},
+  booktitle =	{European Conference on Object-Oriented Programming  (ECOOP)},
+  year =	{2018},
+}
