--- a/Sources/Nested/overview.tex
+++ b/Sources/Nested/overview.tex
@@ -122,7 +122,7 @@ reason why we have so many subtyping relations in \cref{fig:diagram}.
 
 \begin{figure}[t]
   \centering
-\includegraphics[scale=0.75]{diagram.eps}
+\includegraphics[scale=0.75]{figures/diagram.eps}
 \caption{Summary of the relationships between language components}
 \label{fig:diagram}
 \end{figure}
