--- a/Sources/Poly/overview.tex
+++ b/Sources/Poly/overview.tex
@@ -1,7 +1,7 @@
 
 \section{Overview}
 
-Without getting too technical, in this section we give an overview of
+In this section we first give an overview of
 disjoint polymorphism~\citep{alpuimdisjoint}, a variant of parametric polymorphism. The main novelty
 is the so-called disjoint (universal) quantification of the form
 $[[ \ X ** A . B ]]$. Inspired by bounded quantification~\citep{cardelli1994extension} where a
